2009-11-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Add Dominick back into Authors per his new request
	  reversing his requests to be removed from last December

2009-11-17  Dirk Eddelbuettel  <edd@debian.org>

	* man/RcppParams.Rd: applied patch by Frank S. Thomas to fix example

2009-11-15  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppDateVector.{cpp,h}: Moved out of Rcpp.{h,cpp}
	* src/RcppDatetimeVector.{cpp,h}: idem
	* src/RcppFunction.{cpp,h}: idem
	* src/RcppMatrix.{cpp,h}: idem
	* src/RcppMatrixView.{cpp,h}: idem
	* src/RcppNumList.{cpp,h}: idem
	* src/RcppResultSet.{cpp,h}: idem
	* src/RcppStringVector.{cpp,h}: idem
	* src/RcppStringVectorView.{cpp,h}: idem
	* src/RcppVector.{cpp,h}: idem
	* src/RcppVectorView.{cpp,h}: idem
	* src/RcppCommon.cpp: takes remaining utility function from Rcpp.cpp

2009-11-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.6.8

	* src/RcppParams.{cpp,h}: Code reorginsation, moved out of Rcpp.{h,cpp}
	* src/RcppDate.{cpp,h}: idem
	* src/RcppDatetime.{cpp,h}: idem
	* src/RcppCommon.h: New header file for common defines and includes
	* src/Makevars{,.win}: Updated and generalised to reflect new files

2009-11-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.6.7

	* man/RcppVector.Rd: Remove erraneous use of \R in \title{} section
	  noticed by the Rd parser in R-devel (with thanks to Kurt Hornik)

2009-11-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppList.{h,cpp}: Added a simple class to accept list()
	  objects in order to cope with non-rectangular data-types -- this
	  comes from the RProtoBuf code currently only on r-forge where
	  we need accept lists that are potentially nested.
	  The API for RcppList is not fully fleshed out and needs a few
	  more append() member functions. Also length is currently fixed.

	* cleanup: Change header file removal to Rcpp*.h

	* inst/README: Added short README about history and status

	* inst/doc/: Updated doxygen documentation
