@@ -2,7 +2,6 @@ useDynLib(Rcpp)
 
 export(RcppExample,
        print.RcppExample,
-       RcppVersion,
        RcppDateExample,
        RcppParamsExample,
        RcppVectorExample)
